[package]
name = "yaah"
version = "0.2.1"
authors = [ "Wilfried Chauveau <wilfried.chauveau@ithinuel.me>" ]
description = "YAAH – Yet Another AOC Helper"
documentation = "https://docs.rs/yaah"
repository = "https://github.com/ithinuel/yaah"
edition = "2021"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.5", features = ["extra-traits", "full"] }
quote = "1.0.2"
proc-macro2 = "1.0.5"
proc-macro-error = "1.0.4"
itertools = "0.10.5"
reqwest = { version = "0.11", features = ["blocking", "cookies"] }
anyhow = "1.0.0"

[dev-dependencies]
clap = { version = "4.0", features = ["derive"] }
